# rho

./: .gitignore  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  FIXES.md  FIXES_VALIDATION.md  LICENSE  PKGBUILD  README.md  TODO.md  build.rs  package-lock.json  package.json  rho-session-8bba3778.html
crates/rho/: CHANGELOG.md  Cargo.toml  PKGBUILD  THIRD-PARTY-NOTICES
crates/rho-provider/: Cargo.toml
crates/rho-provider/src/anthropic/: convert.rs  mod.rs  stream.rs
crates/rho-providers/: CHANGELOG.md  Cargo.toml  README.md
crates/rho-providers/src/: credentials.rs  credentials_openrouter_tests.rs  lib.rs  paths.rs  provider.rs  provider_tests.rs
crates/rho-providers/src/auth/: codex_oauth.rs  github_copilot_device.rs  github_copilot_token.rs  kimi_oauth.rs  kimi_oauth_tests.rs  kimi_token.rs  kimi_token_tests.rs  login_dispatch.rs  login_dispatch_tests.rs  loopback.rs  loopback_tests.rs  mod.rs  openrouter_oauth.rs  openrouter_oauth_tests.rs  provider_credentials.rs  xai_oauth.rs  xai_token.rs
crates/rho-providers/src/credentials/: backend.rs  backend_tests.rs  file.rs  file_document.rs  file_lock.rs  file_permissions.rs  file_tests.rs  file_windows.rs  memory.rs  mod.rs  os.rs  os_tests.rs  store_tests.rs
crates/rho-providers/src/model/: catalog.rs  catalog_tests.rs  contract.rs  favorites.rs  favorites_tests.rs  handoff.rs  mod.rs  model_overrides.toml  models_dev.rs  models_dev_tests.rs  provider_models.rs  provider_models_capabilities_tests.rs  reasoning_capabilities.rs  reasoning_capabilities_tests.rs  registry.rs
crates/rho-providers/src/protocol/: cost.rs  cost_tests.rs  mod.rs
crates/rho-providers/src/provider_backend/: stream_timeout.rs  stream_timeout_tests.rs
crates/rho-providers/src/providers/: automation_fixture.rs  builder.rs  builder_tests.rs  factory.rs  mod.rs  openai_compatible.rs  openai_compatible_tests.rs  sdk_contract.rs  sdk_contract_tests.rs  tui_fixture.rs  xai.rs  xai_tests.rs
crates/rho-sdk/: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md
crates/rho-sdk/benches/: release_benchmarks.rs
crates/rho-sdk/examples/: cancellation.rs  custom_provider.rs  custom_tool.rs  image_history.rs  questionnaire_approval.rs  session_snapshot.rs  simple_completion.rs  streaming.rs
crates/rho-sdk/src/: cancellation.rs  cancellation_tests.rs  client.rs  compaction.rs  compaction_tests.rs  diagnostics.rs  error.rs  error_tests.rs  event.rs  host_input.rs  host_input_tests.rs  id.rs  id_tests.rs  lib.rs  model.rs  model_tests.rs  orchestration.rs  orchestration_tests.rs  persistence.rs  persistence_tests.rs  provider.rs  provider_tests.rs  reasoning.rs  reasoning_tests.rs  run.rs  runtime_tests.rs  secret.rs  secret_tests.rs  session.rs  session_host_tool_call_tests.rs  session_tests.rs  steering.rs  tool.rs  tool_tests.rs  usage.rs  usage_tests.rs  workspace.rs  workspace_tests.rs
crates/rho-sdk/src/fixtures/: session-snapshot-v1.json  session-snapshot-v2.json
crates/rho-sdk/src/model/: context.rs  context_tests.rs  handoff.rs  handoff_tests.rs
crates/rho-sdk/src/orchestration/: stream_capture.rs  tool_turn.rs
crates/rho-sdk/src/tool/: preparation.rs
crates/rho-sdk/src/workspace/: approval.rs  capability.rs  path.rs
crates/rho-sdk/tests/: parallel_tool_batches.rs  parallel_tool_interactions.rs  redaction_canary.rs  reliability_boundedness.rs  reliability_cancellation.rs  reliability_properties.rs
crates/rho-sdk/tests/support/: mod.rs
crates/rho-tools/: CHANGELOG.md  Cargo.toml  README.md
crates/rho-tools/src/: bash.rs  bash_output_tests.rs  edit_file.rs  image_format.rs  image_format_tests.rs  legacy_sdk_adapter.rs  legacy_sdk_adapter_tests.rs  lib.rs  paths.rs  powershell.rs  process_env.rs  read_file.rs  read_file_tests.rs  sdk_adapter.rs  sdk_adapter_tests.rs  sdk_security.rs  sdk_security_tests.rs  sdk_shell.rs  sdk_shell_tests.rs  sdk_support.rs  tool.rs  write_file.rs
crates/rho-tui-pty/: Cargo.toml
crates/rho-tui-pty/src/: artifacts.rs  env.rs  harness.rs  keys.rs  lib.rs  pty.rs  scenario.rs  scenarios.rs  screen.rs  timing.rs
crates/rho-tui-pty/src/scenarios/: background_agents.rs  config.rs  conversation_tree.rs  goal.rs  id.rs  pickers.rs  runtime_info.rs
crates/rho-tui-pty/tests/: harness_self.rs
crates/rho/src/: cancellation.rs  cancellation_tests.rs  cli.rs  cli_tests.rs  clipboard_image.rs  commands.rs  compaction.rs  config.rs  config_atomic_tests.rs  config_format.rs  config_tests.rs  config_writer.rs  credential_store.rs  credential_store_tests.rs  credentials.rs  diagnostics.rs  diagnostics_tests.rs  executable.rs  executable_tests.rs  export.rs  export_tests.rs  herdr.rs  herdr_tests.rs  keybindings.rs  lib.rs  main.rs  model_aliases.rs  model_aliases_tests.rs  paths.rs  permission.rs  permission_tests.rs  prompt.rs  prompt_templates.rs  prompt_templates_tests.rs  provider.rs  provider_config.rs  provider_config_tests.rs  provider_tests.rs  questionnaire.rs  questionnaire_tests.rs  (+14 more)
crates/rho/src/agent/: agent_tests.rs  catalog.rs  definition.rs  internal.rs  internal_tests.rs  mod.rs  one_shot.rs  one_shot_tests.rs  parser.rs
crates/rho/src/app/: agent_binding.rs  agent_binding_tests.rs  agent_executor.rs  agent_executor_tests.rs  automation.rs  automation_protocol.rs  automation_protocol_tests.rs  automation_tests.rs  bootstrap.rs  bootstrap_tests.rs  cli_config.rs  cli_config_refresh_tests.rs  cli_config_tests.rs  config_repository.rs  config_repository_tests.rs  interactive.rs  interactive_presenter.rs  interactive_presenter_agent.rs  interactive_presenter_format.rs  interactive_presenter_tests.rs  interactive_run_controller.rs  interactive_runtime.rs  interactive_runtime_tests.rs  interactive_session_controller.rs  interactive_state.rs  interactive_state_tests.rs  interactive_tests.rs  login.rs  mod.rs  policy.rs  policy_tests.rs  provider_controller.rs  runtime_builder.rs  runtime_builder_tests.rs  sdk_config.rs  sdk_config_tests.rs
crates/rho/src/auth/: mod.rs  (+6 more)
crates/rho/tests/: automation_cli.rs  tui_external_editor_pty.rs  tui_pty.rs
(+716 files in other folders)
