[package]
name = "rho-coding-agent"
version = "0.13.0"
edition = "2021"
description = "A lightweight agent harness inspired by Pi"
license = "MIT"
repository = "https://github.com/matthewyjiang/rho"
readme = "README.md"

[[bin]]
name = "rho"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
futures-util = "0.3"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
regex = "1"
rusqlite = { version = "0.32" }
keyring = "4.1.2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
webbrowser = "1"
libc = "0.2"

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled"]

[dev-dependencies]
tempfile = "3"
