[package]
name = "rho-provider"
# Internal workspace crate. Keep this at 0.0.0, only the binary crate is versioned.
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
