[package]
name = "rho-coding-agent-provider"
version = "0.13.1"
edition = "2021"
description = "Internal provider backend crate for rho-coding-agent"
license = "MIT"
repository = "https://github.com/matthewyjiang/rho"

[lib]
name = "rho_provider"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
