[package]
name = "rho-sdk"
version = "1.0.1"
edition = "2021"
rust-version = "1.86"
description = "Embeddable, headless agent runtime for Rho"
license = "MIT"
repository = "https://github.com/matthewyjiang/rho"
readme = "README.md"
keywords = ["agent", "ai", "sdk"]
categories = ["asynchronous", "development-tools"]

[[bench]]
name = "release_benchmarks"
harness = false

[features]
# Keep embedding side effects and sensitive capabilities opt-in. The SDK does
# not currently ship capability adapters, so there are no opt-in features yet.
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
