[package]
name = "rho-agent-tools"
version = "0.4.0"
edition = "2021"
rust-version = "1.92"
description = "Workspace coding tools and SDK tool adapters for Rho"
license = "MIT AND Apache-2.0"
repository = "https://github.com/matthewyjiang/rho"
readme = "README.md"

[dependencies]
rho-sdk = { version = "1.6.0", path = "../rho-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
same-file = "1"
similar = "2"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
