[package]
name = "rho-tui-pty"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Deterministic PTY harness for Rho interactive TUI tests"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
vt100 = "0.16"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "rho-pty-scenario"
path = "src/bin/rho_pty_scenario.rs"
