[package]
name = "rho-coding-agent"
version = "1.11.0"
edition = "2021"
rust-version = "1.92"
description = "A lightweight agent harness inspired by Pi"
license = "MIT AND Apache-2.0"
repository = "https://github.com/matthewyjiang/rho"
readme = "../../README.md"
include = [
    "/src/**",
    "/tests/**",
    "/build.rs",
    "/README.md",
    "/LICENSE",
    "/LICENSE-APACHE-GROK-BUILD",
    "/LICENSE-MIT-MERMAID-RS-RENDERER",
    "/THIRD-PARTY-NOTICES",
]

[[bin]]
name = "rho"
path = "src/main.rs"

[dependencies]
rho-sdk = { version = "1.7.0", path = "../rho-sdk" }
rho-providers = { version = "0.6.0", path = "../rho-providers", default-features = false }
rho-tools = { version = "0.4.0", path = "../rho-tools", package = "rho-agent-tools" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
humantime = "2"
anyhow = "1"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
crossterm = { version = "0.29.0", features = ["event-stream", "osc52"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
regex = "1"
ignore = "0.4"
rusqlite = { version = "0.32" }
keyring = "4.1.2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
webbrowser = "1"
libc = "0.2"
unicode-segmentation = "1"
unicode-width = "0.2"
similar = "2"
same-file = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
katex-rs = "0.2.4"
mermaid-rs-renderer = { version = "=0.3.1", default-features = false }
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled", "rho-providers/bundled-sqlite"]

[dev-dependencies]
pretty_assertions = "1"
rho-tui-pty = { path = "../rho-tui-pty" }
tempfile = "3"

[build-dependencies]
winresource = "0.1.31"
